# procurement-system

./: .env  .env.example  .gitignore  BUG_FIXES_SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  logs.sh  project_brain.md  start.sh  troubleshoot.sh
backend/: .env.example  Dockerfile  init-db.sql  pyproject.toml  requirements.txt
backend/alembic/versions/: initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  categories.py  inventory.py  products.py  purchase_orders.py  shipments.py  suppliers.py  users.py
backend/app/core/: celery.py  config.py  database.py  logging.py  password.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  base.py  category.py  inventory.py  product.py  purchase_order.py  shipment.py  supplier.py  user.py
backend/app/schemas/: __init__.py  auth.py  category.py  inventory.py  purchase_order.py  shipment.py  supplier.py  user.py
backend/app/services/: __init__.py  auth.py  category.py  inventory.py  product.py  purchase_order.py  shipment.py  supplier.py  user.py
backend/app/tasks/: __init__.py  email.py  maintenance.py  notifications.py  reports.py
docs/: docker-compose-guide.md  logging-guide.md  project_goals_tracker.md
docs/project_brain/: backend_logic.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ProtectedRoute.jsx
scripts/: setup-dev.sh
(+9 files in other folders)
